--- a/todo-list/package.json
+++ b/todo-list/package.json
@@ -1,6 +1,7 @@
 {
   "name": "todo-list",
   "version": "1.0.0",
+  "description": "",
   "main": "webpack.config.js",
   "dependencies": {},
   "devDependencies": {
@@ -9,12 +10,16 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
+    "expose-loader": "^0.7.5",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.4.1",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
+    "url-loader": "^2.1.0",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.8",
     "webpack-dev-server": "^3.8.0"
@@ -25,6 +30,5 @@
     "build": "webapck --mode production"
   },
   "author": "",
-  "license": "ISC",
-  "description": ""
+  "license": "ISC"
 }
