--- a/blog/package.json
+++ b/blog/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webapck --mode production"
+    "build": "webpack --mode production"
   },
   "author": "",
   "license": "ISC"
